# GhostForge

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.py
examples/: create_ubuntu_vms.sh  create_windows11_vms.sh  create_windows_vms.sh
ghostforge/: __init__.py  __main__.py  cli.py
ghostforge/core/: __init__.py  config.py  presets.py
ghostforge/managers/: __init__.py  cloudinit_manager.py  dependency_manager.py  disk_manager.py  image_manager.py  mount_manager.py  network_manager.py  vm_manager.py
ghostforge/utils/: __init__.py  resources.py  system.py
tests/: __init__.py  test_config.py  test_presets.py  test_utils.py
